app and index2 and java

--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,11 @@
-body{
-	background-color: red;
-
-}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test</title>
+</head>
+<body>
+<h1>Hi This is just a test</h1>
+<h1>Hi This is just a test2</h1>
+<p>This is just a Test</p>
+</body>
+</html>
