--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,8 @@
 	<title>test</title>
 </head>
 <body>
-<h1>Hi This is just a test</h1>
-<h1>Hi This is just a test2</h1>
+<h1>hey</h1>
+<h1>Hi This is just another test</h1>
 <p>This is just a Test</p>
 </body>
 </html>
